Making pdf open in the same window

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <script>
         document.getElementById('generate-pdf').addEventListener('click', function() {
-            window.open('/create-pdf', '_blank');
+            window.open('/create-pdf');
         });
     </script>
 </body>
