Add endpoint to generate PDF and trigger event
Add a new endpoint to generate a PDF, add the PDF data to an event, and trigger the event. Also, add a new button to the main index page to trigger the event.

* **index.js**
  - Add a new endpoint `/trigger-event` that generates a PDF and adds the PDF data to an event.
  - Trigger the event after adding the PDF data.
  - Add a new route to serve the updated `index.html` file.

* **public/index.html**
  - Add a new button with id `trigger-event` to trigger the event.
  - Add a new script to handle the click event of the `trigger-event` button.

* **README.md**
  - Update the documentation to include the new `/trigger-event` endpoint.
  - Add instructions on how to use the new button on the main index page.

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,17 @@
 </head>
 <body>
     <button id="generate-pdf">Generate PDF</button>
+    <button id="trigger-event">Trigger Event</button>
 
     <script>
         document.getElementById('generate-pdf').addEventListener('click', function() {
             window.open('/create-pdf');
+        });
+
+        document.getElementById('trigger-event').addEventListener('click', function() {
+            fetch('/trigger-event')
+                .then(response => response.text())
+                .then(data => alert(data));
         });
     </script>
 </body>
