Update trigger-event API to separate PDF generation and event triggering
Remove the `/trigger-event` endpoint and update the main page to handle event triggering.

* **index.js**
  - Remove the `/trigger-event` endpoint.

* **public/index.html**
  - Update the `trigger-event` button to call the `create-pdf` endpoint.
  - Add the output of the API call to an event and trigger the event.

* **README.md**
  - Remove the description of the `/trigger-event` endpoint.
  - Update the instructions for using the buttons on the main page.

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,12 @@
         });
 
         document.getElementById('trigger-event').addEventListener('click', function() {
-            fetch('/trigger-event')
-                .then(response => response.text())
-                .then(data => alert(data));
+            fetch('/create-pdf')
+                .then(response => response.blob())
+                .then(blob => {
+                    const event = new CustomEvent('pdfGenerated', { detail: blob });
+                    document.dispatchEvent(event);
+                });
         });
     </script>
 </body>
