Change the event to use postMessage to send the PDF contents
Update the event to use `postMessage` to send the PDF contents.

* Change the `trigger-event` button click event in `public/index.html` to use `postMessage` to send the PDF contents.
* Update the description of the "Trigger Event" button in `README.md` to reflect the use of `postMessage`.

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,7 @@
             fetch('/create-pdf')
                 .then(response => response.blob())
                 .then(blob => {
-                    const event = new CustomEvent('pdfGenerated', { detail: blob });
-                    document.dispatchEvent(event);
+                    window.postMessage({ type: 'pdfGenerated', pdf: blob }, '*');
                 });
         });
     </script>
