--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
             fetch('/create-pdf')
                 .then(response => response.blob())
                 .then(blob => {
+                    console.log("firing events");
+                    window.webkit.messageHandlers.cordova_iab.postMessage({ type: 'pdfGenerated', pdf: blob }, '*');
                     window.postMessage({ type: 'pdfGenerated', pdf: blob }, '*');
                 });
         });
