Update generate-pdf-from-url to call new endpoint
Add a new endpoint `/get-pdf` to return the PDF located at `public/GSP-Disclosure-statement.pdf`.

* Set the `Content-Type` header to `application/pdf` in the new endpoint.
* Update the `generate-pdf-from-url` button click event in `public/index.html` to call the new `/get-pdf` endpoint instead of the external URL.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/imbeyondboredom/pdf-generator?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         });
 
         document.getElementById('generate-pdf-from-url').addEventListener('click', function() {
-            fetch('https://pa529.com/pdf/gsp/GSP-Disclosure-statement.pdf')
+            fetch('/get-pdf')
                 .then(response => response.arrayBuffer())
                 .then(buffer => {
                     console.log("firing events");
